--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.3",
-    "react-native-safe-area-context": "^4.8.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
